Remove test comments