@@ -4,8 +4,8 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -37,12 +37,12 @@ public class ListHouseholdsCommandTest {
         HouseholdId householdId1 = new HouseholdId("H000001");
         Household household1 = new Household(
                 new Name("John Household"), new Address("123 Main St"),
-                new Contact("91234567"), householdId1, new HashSet<>(Arrays.asList(new Tag("priority"))));
+                new Contact("91234567"), householdId1, new HashSet<>(List.of(new Tag("priority"))));
 
         HouseholdId householdId2 = new HouseholdId("H000002");
         Household household2 = new Household(
                 new Name("Jane Household"), new Address("456 Side St"),
-                new Contact("98765432"), householdId2, new HashSet<>(Arrays.asList(new Tag("standard"))));
+                new Contact("98765432"), householdId2, new HashSet<>(List.of(new Tag("standard"))));
 
         ObservableList<Household> households = FXCollections.observableArrayList(household1, household2);
         when(model.getFilteredHouseholdList()).thenReturn(households);
@@ -69,7 +69,7 @@ public class ListHouseholdsCommandTest {
         HouseholdId householdId = new HouseholdId("H000001");
         Household household = new Household(
                 new Name("Single Household"), new Address("123 Unique St"),
-                new Contact("98765432"), householdId, new HashSet<>(Arrays.asList(new Tag("priority"))));
+                new Contact("98765432"), householdId, new HashSet<>(List.of(new Tag("priority"))));
 
         ObservableList<Household> households = FXCollections.observableArrayList(household);
         when(model.getFilteredHouseholdList()).thenReturn(households);
